# Faceless-Agent

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .npmrc  .prettierignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_FREE_NO_CARD.md  Dockerfile  Dockerfile.backend  IBM_BOB_AUDIT_FINDINGS.md  MIGRATION_SUPABASE.md  MOBILE_BUILD_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_SETUP.md  PR_DESCRIPTION.md  README.md  RELEASE_GUIDE.md  ROLE_ACCESS_REVIEW.md  TESTING_VALIDATION.md  TYPESCRIPT_ERRORS_FIX.md  build-log.txt  deploy.sh  docker-compose.yml  eslint.config.js  firebase-applet-config.json  firebase-applet-config.json.example  firebase.json  firestore.indexes.json  firestore.rules  jest.config.cjs  lighthouserc.cjs  list-models.ts  load-test.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+15 more)
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  e2e_test.py  entrypoint.sh  pyproject.toml  requirements.txt  server_err.txt  server_out.txt  start_backend.bat  test_fix.py  test_ideas.py  test_llm.py  test_simple.py  test_trends.py  test_uuid.py  viralreel.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  account.py  agent_log.py  analytics_snapshot.py  asset.py  base.py  brand_kit.py  compliance_report.py  experiment.py  idea.py  log.py  niche.py  platform_credential.py  published_post.py  publishing_job.py  script.py  (+6 more)
backend/tests/: test_auth.py  test_models.py
(+482 files in other folders)
