[project]
name = "viralreel-agent"
version = "0.1.0"
description = "AI-powered content automation agent for Instagram Reels and YouTube Shorts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "openai>=1.55.0",
    "ollama>=0.4.0",
    "edge-tts>=6.1.0",
    "gTTS>=2.5.0",
    "feedparser>=6.0.11",
    "Pillow>=11.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
